--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "sqlite3": "^5.1.7"
   },
   "dependencies": {
+    "cos-nodejs-sdk-v5": "^2.15.1",
     "tencentcloud-sdk-nodejs-trtc": "^4.1.79",
     "tls-sig-api-v2": "^1.0.2",
     "uuid": "^11.1.0"
